--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -31,15 +30,32 @@ dist.jar=${dist.dir}/ProyectoDosProgramacion.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.appframework-1.0.3.jar=lib/appframework-1.0.3.jar
+file.reference.jdom-1.0.jar=lib/jdom-1.0.jar
+file.reference.swing-worker-1.1.jar=lib/swing-worker-1.1.jar
+file.reference.xalan.jar=lib/xalan.jar
+file.reference.xerces.jar=lib/xerces.jar
+file.reference.xercesImpl.jar=lib/xercesImpl.jar
+file.reference.xml-apis.jar=lib/xml-apis.jar
+file.reference.xmlParserAPIs.jar=lib/xmlParserAPIs.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.appframework-1.0.3.jar}:\
+    ${file.reference.jdom-1.0.jar}:\
+    ${file.reference.swing-worker-1.1.jar}:\
+    ${file.reference.xalan.jar}:\
+    ${file.reference.xerces.jar}:\
+    ${file.reference.xercesImpl.jar}:\
+    ${file.reference.xml-apis.jar}:\
+    ${file.reference.xmlParserAPIs.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -101,6 +117,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
