--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,23 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.appframework-1.0.3.jar=lib/appframework-1.0.3.jar
+file.reference.appframework-1.0.3.jar-1=..\\..\\Copia\\ProyectoDosProgra\\lib\\appframework-1.0.3.jar
+file.reference.gson-2.2.2.jar=..\\..\\Copia\\ProyectoDosProgra\\lib\\gson-2.2.2.jar
 file.reference.jdom-1.0.jar=lib/jdom-1.0.jar
+file.reference.jdom-1.0.jar-1=..\\..\\Copia\\ProyectoDosProgra\\lib\\jdom-1.0.jar
+file.reference.json-simple-2.1.2.jar=..\\..\\Copia\\ProyectoDosProgra\\lib\\json-simple-2.1.2.jar
 file.reference.swing-worker-1.1.jar=lib/swing-worker-1.1.jar
+file.reference.swing-worker-1.1.jar-1=..\\..\\Copia\\ProyectoDosProgra\\lib\\swing-worker-1.1.jar
 file.reference.xalan.jar=lib/xalan.jar
+file.reference.xalan.jar-1=..\\..\\Copia\\ProyectoDosProgra\\lib\\xalan.jar
 file.reference.xerces.jar=lib/xerces.jar
+file.reference.xerces.jar-1=..\\..\\Copia\\ProyectoDosProgra\\lib\\xerces.jar
 file.reference.xercesImpl.jar=lib/xercesImpl.jar
+file.reference.xercesImpl.jar-1=..\\..\\Copia\\ProyectoDosProgra\\lib\\xercesImpl.jar
 file.reference.xml-apis.jar=lib/xml-apis.jar
+file.reference.xml-apis.jar-1=..\\..\\Copia\\ProyectoDosProgra\\lib\\xml-apis.jar
 file.reference.xmlParserAPIs.jar=lib/xmlParserAPIs.jar
+file.reference.xmlParserAPIs.jar-1=..\\..\\Copia\\ProyectoDosProgra\\lib\\xmlParserAPIs.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -51,7 +61,17 @@ javac.classpath=\
     ${file.reference.xerces.jar}:\
     ${file.reference.xercesImpl.jar}:\
     ${file.reference.xml-apis.jar}:\
-    ${file.reference.xmlParserAPIs.jar}
+    ${file.reference.xmlParserAPIs.jar}:\
+    ${file.reference.appframework-1.0.3.jar-1}:\
+    ${file.reference.gson-2.2.2.jar}:\
+    ${file.reference.jdom-1.0.jar-1}:\
+    ${file.reference.json-simple-2.1.2.jar}:\
+    ${file.reference.swing-worker-1.1.jar-1}:\
+    ${file.reference.xalan.jar-1}:\
+    ${file.reference.xerces.jar-1}:\
+    ${file.reference.xercesImpl.jar-1}:\
+    ${file.reference.xml-apis.jar-1}:\
+    ${file.reference.xmlParserAPIs.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
